--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+        <ops4j.orient.version>0.3.0</ops4j.orient.version>
+        <orientdb.version>2.0.11</orientdb.version>
+        <commons-lang.version>3.1</commons-lang.version>
 	</properties>
 
 	<dependencies>
@@ -36,12 +39,17 @@
 		<dependency>
 			<groupId>com.orientechnologies</groupId>
 			<artifactId>orientdb-graphdb</artifactId>
-			<version>2.0.11</version>
+			<version>${orientdb.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ops4j.orient</groupId>
+			<artifactId>orient-spring-tx</artifactId>
+			<version>${ops4j.orient.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.1</version>
+			<version>${commons-lang.version}</version>
 		</dependency>
 		
 		<dependency>
